<resources>
    <string name="google_maps_api_key">AIzaSyBivdfwH9SwCh2_qQ8dEF-lL4nCckdUMhI</string>

    <string name="app_name">OurglassTV</string>

    <string name="get_started">Let\'s get started!</string>

    <string name="welcome_message">WELCOME!</string>
    <string name="welcome_text">To use Ourglass TV&#8230;</string>
    <string name="or">or</string>

    <string name="login">Log in</string>
    <string name="loggingIn">Logging in&#8230;</string>
    <string name="loginCaps">LOG IN</string>
    <string name="signup">Sign up</string>
    <string name="loginErrorAlertMsg">There was a problem logging in.</string>

    <string name="emailCaps">EMAIL</string>
    <string name="passwordCaps">PASSWORD</string>
    <string name="firstNameCaps">FIRST NAME</string>
    <string name="lastNameCaps">LAST NAME</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="firstName">First name</string>
    <string name="lastName">Last name</string>

    <string name="enterNameTitle">WHO ARE YOU?</string>
    <string name="enterEmailTitle">WHAT\'S YOUR EMAIL?</string>
    <string name="enterPasswordTitle">PASSWORD?</string>

    <string name="goodCheckDescription">good check</string>

    <string name="passwordRequirements">Your password must be at least 8 characters long.</string>

    <string name="goBackDescription">go back</string>
    <string name="nextDescription">next</string>

    <string name="iconDescription">icon</string>

    <string name="networkLabel">Network:</string>

    <string name="emptyDeviceList">No devices found!</string>
    <string name="emptyVenueList">No venues were found!</string>

    <string name="friendEmail">FRIEND\'S EMAIL ADDRESS</string>
    <string name="inviteFriend">Invite</string>

    <string name="notConnected">Not connected</string>

    <string name="save">Save</string>

    <string name="pickVenue">Venues</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="settingsOption">Select this settings option.</string>

    <string name="noGooglePlay">Oh no! It looks like your device does not support Google Play Services, so we are unable to show this page.</string>

    <string name="action_add">Add</string>

    <string name="yelpSearchTermHint">e.g. tacos, delivery, Max\'s</string>
    <string name="yelpSearchLocation">city, state, or zip code</string>
    <string name="yelpSearchButton">Find on Yelp</string>

    <string name="venueNameHint">Venue name*</string>
    <string name="addressHint">Street Address*</string>
    <string name="address2Hint">Street Address 2</string>
    <string name="cityHint">City*</string>
    <string name="stateHint">State/Province*</string>
    <string name="zipHint">Postal/Zip Code*</string>

    <string name="createVenue">Create</string>
    <string name="createDevice">Create</string>

    <string name="regCodeHint">Registration code</string>
    <string name="deviceNameHint">Device name</string>

    <string name="currentLocation">Current location</string>

    <string name="yelpVenueImageDescription">Image for this Yelp venue.</string>

    <string name="email_not_valid">Oops! It looks like this email is not valid.</string>

    <string name="pwd_not_valid">The password you entered is not valid.</string>

    <string name="req_field">This is a required field.</string>

    <string name="venue_created">Venue created!</string>

    <string name="offline">OFFLINE</string>

    <!-- Common phrases -->
    <string name="uhoh">Uh oh!</string>
    <string name="ok">OK</string>

    <!-- ChangePasswordFragment -->
    <string name="change_password">Change password</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="repeat_new_password">Repeat new password</string>
    <string name="passwords_must_match">It looks like these passwords don\'t match!</string>
    <string name="password_wrong">It looks like this isn\'t the right password!</string>
    <string name="password_saved">Password saved!</string>
    <string name="password_save_error">Something went wrong changing your password.</string>

    <!-- Toolbar titles -->
    <string name="tb_edit_account">Edit account</string>
    <string name="tb_settings">Settings</string>
    <string name="tb_venues">Venues</string>
    <string name="tb_my_venues">My venues</string>
    <string name="tb_add_venue">Add venue</string>
    <string name="tb_find_venues">Find venue</string>
    <string name="tb_pick_venue">Pick a venue</string>
    <string name="tb_setup_device">Setup device</string>
    <string name="tb_change_password">Change password</string>

</resources>
