<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_invite_friends"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/OGBackgroundGrey"
    tools:context="tv.ourglass.alyssa.bourbon_android.Scenes.Settings.InviteFriendsActivity">

    <TextView
        android:text="@string/friendEmail"
        style="@style/InputHeader"
        android:layout_marginTop="20dp"
        android:labelFor="@+id/email"
        android:id="@+id/emailLabel" />

    <LinearLayout
        android:id="@+id/emailContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailLabel"
        android:layout_alignStart="@+id/emailLabel"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:inputType="textEmailAddress"
            style="@style/EditTextCustom"
            android:ems="10"
            android:id="@+id/email" />

        <ImageView
            android:id="@+id/emailCheck"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:src="@drawable/ic_check_black_36dp"
            android:contentDescription="@string/goodCheckDescription"
            android:tint="@color/OGWhite"
            android:alpha="0.0" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inviteFriend"
        style="@style/InputHeader"
        android:onClick="invite"
        android:id="@+id/inviteFriend"
        android:layout_below="@+id/emailContainer"
        android:layout_marginTop="30dp"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/nextDescription"
        android:alpha="0.0"
        android:tint="@color/OGWhite"/>

</RelativeLayout>
