<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_edit_account"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/OGBackgroundGrey"
    tools:context="tv.ourglass.alyssa.bourbon_android.Scenes.Settings.EditAccountActivity">

    <tv.ourglass.alyssa.bourbon_android.Views.RegularButton
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:onClick="save"
        android:background="@android:color/transparent"
        android:textColor="@color/OGWhite"
        android:text="@string/save"/>

    <tv.ourglass.alyssa.bourbon_android.Views.RegularTextView
        android:text="@string/firstNameCaps"
        style="@style/InputHeader"
        android:layout_marginTop="20dp"
        android:labelFor="@+id/firstName"
        android:id="@+id/firstNameLabel" />

    <tv.ourglass.alyssa.bourbon_android.Views.RegularEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        style="@style/EditTextCustom"
        android:ems="10"
        android:layout_marginTop="5dp"
        android:id="@+id/firstName" />


    <tv.ourglass.alyssa.bourbon_android.Views.RegularTextView
        android:text="@string/lastNameCaps"
        style="@style/InputHeader"
        android:layout_marginTop="20dp"
        android:labelFor="@+id/lastName"
        android:id="@+id/lastNameLabel" />

    <tv.ourglass.alyssa.bourbon_android.Views.RegularEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        style="@style/EditTextCustom"
        android:ems="10"
        android:layout_marginTop="5dp"
        android:id="@+id/lastName" />


    <tv.ourglass.alyssa.bourbon_android.Views.RegularTextView
        android:text="@string/emailCaps"
        style="@style/InputHeader"
        android:layout_marginTop="20dp"
        android:labelFor="@+id/email"
        android:id="@+id/emailLabel" />

    <LinearLayout
        android:id="@+id/emailContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <tv.ourglass.alyssa.bourbon_android.Views.RegularEditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:inputType="textEmailAddress"
            style="@style/EditTextCustom"
            android:ems="10"
            android:id="@+id/email" />

        <ImageView
            android:id="@+id/emailCheck"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:src="@drawable/ic_check_black_36dp"
            android:contentDescription="@string/goodCheckDescription"
            android:tint="@color/OGWhite"
            android:alpha="0.0" />

    </LinearLayout>

</LinearLayout>
