<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/OGBackgroundGrey"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <tv.ourglass.ourglasstv.Views.RegularEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/currentPassword"
                android:hint="@string/current_password"
                android:inputType="textPassword"
                android:textColor="@color/OGWhite"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <tv.ourglass.ourglasstv.Views.RegularEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/newPassword"
                android:hint="@string/new_password"
                android:inputType="textPassword"
                android:textColor="@color/OGWhite"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <tv.ourglass.ourglasstv.Views.RegularEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/repeatNewPassword"
                android:hint="@string/repeat_new_password"
                android:inputType="textPassword"
                android:textColor="@color/OGWhite"/>
        </android.support.design.widget.TextInputLayout>

        <tv.ourglass.ourglasstv.Views.RegularButton
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="@android:color/transparent"
            android:textColor="@color/OGWhite"
            android:text="@string/save"
            android:textAlignment="textEnd" />

    </LinearLayout>

</LinearLayout>
