<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="tv.ourglass.alyssa.bourbon_android.Scenes.Settings.EditAccount.EditAccountFragment">

    <LinearLayout
        android:id="@+id/edit_account"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:background="@color/OGBackgroundGrey">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <tv.ourglass.alyssa.bourbon_android.Views.RegularEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/email"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@color/OGLightGrey" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <tv.ourglass.alyssa.bourbon_android.Views.RegularEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/firstName"
                android:hint="@string/firstName"
                android:inputType="textPersonName"
                android:textColor="@color/OGWhite"/>
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <tv.ourglass.alyssa.bourbon_android.Views.RegularEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/lastName"
                android:hint="@string/lastName"
                android:inputType="textPersonName"
                android:textColor="@color/OGWhite"/>
        </android.support.design.widget.TextInputLayout>

        <tv.ourglass.alyssa.bourbon_android.Views.RegularButton
            android:id="@+id/save"
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="@android:color/transparent"
            android:textColor="@color/OGWhite"
            android:text="@string/save"
            android:textAlignment="textEnd" />

    </LinearLayout>

</FrameLayout>


