<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_welcome"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/OGBackgroundGrey"
    tools:context=".Scenes.Registration.WelcomeActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:text="@string/welcome_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/welcomeTextView"
            android:layout_marginTop="50dp"
            android:layout_centerHorizontal="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:fontFamily="sans-serif-medium"
            android:textSize="50sp"
            android:textColor="@color/OGLightBlue"/>

        <TextView
            android:text="@string/welcome_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/welcomeTextView"
            android:layout_alignStart="@+id/welcomeTextView"
            android:layout_alignEnd="@+id/welcomeTextView"
            android:layout_centerHorizontal="true"
            android:textColor="@color/OGWhite"
            android:textSize="20sp"
            android:layout_marginTop="0dp"
            android:id="@+id/textView1"
            android:textAlignment="viewStart" />

        <Button
            android:text="@string/login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView1"
            android:layout_alignStart="@+id/textView1"
            android:layout_alignEnd="@+id/textView1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:background="@color/OGLightBlue"
            android:id="@+id/loginButton"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="20sp"
            android:fontFamily="sans-serif"
            android:onClick="login" />

        <TextView
            android:text="@string/or"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/loginButton"
            android:layout_alignStart="@+id/loginButton"
            android:layout_alignEnd="@+id/loginButton"
            android:layout_centerHorizontal="true"
            android:textColor="@color/OGWhite"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:id="@+id/textView2"
            android:textAlignment="viewStart" />

        <Button
            android:text="@string/signup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView2"
            android:layout_alignStart="@+id/textView2"
            android:layout_alignEnd="@+id/textView2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:background="@color/OGLightBlue"
            android:id="@+id/signupButton"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="20sp"
            android:onClick="signup" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

</LinearLayout>