<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/OGGREEN"
    tools:context=".Scenes.Registration.EnterPasswordActivity">

    <tv.ourglass.alyssa.bourbon_android.Views.MediumTextView
        android:text="@string/enterPasswordTitle"
        style="@style/PageHeader"
        android:id="@+id/textView" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/textView"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <tv.ourglass.alyssa.bourbon_android.Views.RegularEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/password"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/OGWhite"/>
        </android.support.design.widget.TextInputLayout>

        <tv.ourglass.alyssa.bourbon_android.Views.LightTextView
            android:text="@string/passwordRequirements"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:id="@+id/passwordRequirements"
            android:textSize="12sp"
            android:textColor="@color/OGWhite" />

        <!--<ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="goBack"
            android:id="@+id/backButton"
            android:layout_below="@id/passwordRequirements"
            android:layout_alignStart="@id/passwordContainer"
            android:layout_marginTop="50dp"
            android:src="@drawable/ic_fast_rewind_black_36dp"
            android:contentDescription="@string/goBackDescription"
            android:background="@color/OGGREEN"
            android:tint="@color/OGWhite"/>-->

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="next"
            android:id="@+id/nextButton"
            android:layout_marginTop="50dp"
            android:layout_gravity="end"
            android:src="@drawable/ic_play_circle_outline_black_36dp"
            android:contentDescription="@string/nextDescription"
            android:background="@color/OGGREEN"
            android:alpha="0.0"
            android:tint="@color/OGWhite"/>

    </LinearLayout>
</RelativeLayout>
