<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/OGHURRICANE_BLUE"
    tools:context="tv.ourglass.ourglasstv.Scenes.Registration.EnterNameActivity">

    <tv.ourglass.ourglasstv.Views.MediumTextView
        android:text="@string/enterNameTitle"
        style="@style/PageHeader"
        android:id="@+id/textView" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="80dip"
            android:background="@drawable/edit_underline">

            <tv.ourglass.ourglasstv.Views.RegularEditText
                android:id="@+id/firstName"
                android:layout_width="match_parent"
                android:layout_height="60dip"
                android:backgroundTint="@android:color/transparent"
                android:hint="@string/firstNameCaps"
                android:inputType="textPersonName"
                android:paddingTop="@dimen/floating_hint_margin"
                android:textColor="@color/OGWhite"
                android:textSize="24dip"
                android:visibility="visible" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="80dip"
            android:layout_marginTop="15dp"
            android:background="@drawable/edit_underline">

            <tv.ourglass.ourglasstv.Views.RegularEditText
                android:id="@+id/lastName"
                android:layout_width="match_parent"
                android:layout_height="60dip"
                android:backgroundTint="@android:color/transparent"
                android:hint="@string/lastNameCaps"
                android:inputType="textPersonName"
                android:paddingTop="@dimen/floating_hint_margin"
                android:textColor="@color/OGWhite"
                android:textSize="24dip" />
        </android.support.design.widget.TextInputLayout>

        <!--<ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="goBack"
            android:id="@+id/backButton"
            android:layout_below="@id/lastName"
            android:layout_alignStart="@id/lastName"
            android:layout_marginTop="50dp"
            android:src="@drawable/ic_fast_rewind_black_36dp"
            android:contentDescription="@string/goBackDescription"
            android:background="@color/OGHURRICANE_BLUE"
            android:tint="@color/OGWhite"/>-->

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="next"
            android:id="@+id/nextButton"
            android:layout_marginTop="50dp"
            android:layout_gravity="end"
            android:src="@drawable/ic_play_circle_outline_black_36dp"
            android:contentDescription="@string/nextDescription"
            android:background="@color/OGHURRICANE_BLUE"
            android:tint="@color/OGWhite"
            android:alpha="0.0"/>

    </LinearLayout>
</RelativeLayout>

